self-host images

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import Section from "../components/section";
 You can now press <kbd>CTRL</kbd> + <kbd>ALT</kbd> + <kbd>N</kbd> to open an
 overlay window of your selected split.
 
-![img](https://i.pajlada.se/da27C.png)
+![overlay-window](./changelog/2.5.2/overlay-window.png)
 
 <br />
 Authored by @nerixyz with help from @pajlada
@@ -30,23 +30,25 @@ Authored by @nerixyz with help from @pajlada
 Messages using the **Message Effects** or **Gigantify an Emote** power-up
 feature are now highlighted. We don't actually show any message effects, nor do we gigantify the emote, but you can pretend the emote is bigger now that you know it's meant to be gigantified.
 
-![message-effects](https://i.pajlada.se/RZHpw.png)
-
-![gigantic-emote](https://i.pajlada.se/owWvk.png)
+![message-effect](./changelog/2.5.2/message-effect.png)
+<br />
+![gigantic-emote](./changelog/2.5.2/gigantic-emote.png)
 
 <br />
 
 Messages from Shared Chats now indicate which channel it was sent in.
 
-![shared-chat](https://i.pajlada.se/tMdMx.png)
+![shared-chat](./changelog/2.5.2/shared-chat.png)
 
 <br />
 
 We've provided better control of some AutoMod features. You can control whether or not to show AutoMod messages that were blocked due to a blocked term. By default, no blocked terms will be visible if you have streamer mode enabled.
 
-![streamer mode enabled](https://i.pajlada.se/0gXTm.png)
+![streamer mode
+enabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png)
 
-![streamer mode disabled](https://i.pajlada.se/Bqt1q.png)
+![streamer mode
+disabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png)
 
 <br />
 
@@ -65,15 +67,15 @@ If you use the inline moderation buttons, you can now upload custom icons for th
 
 To add an icon to a moderation action, click Moderation in the Settings dialog, go to the Moderation buttons tab, and double-click the icon cell next to your action.
 
-![in-settings](https://i.pajlada.se/cx8xY.png)
+![in-settings](./changelog/2.5.2/moderation-button-settings.png)
 
 In chat:
 
-![in-chat](https://i.pajlada.se/qHHLi.png)
+![in-chat](./changelog/2.5.2/moderation-button-in-chat.png)
 
 After clicking the moderation icon:
 
-![after-action](https://i.pajlada.se/MnpCR.png)
+![after-action](./changelog/2.5.2/moderation-button-after-click.png)
 
 <br />
 Authored by @Mm2PL with help from @nerixyz and @pajlada
@@ -109,7 +111,7 @@ You can now show a user's pronoun from [pr.alejo.io](https://pr.alejo.io) in the
 
 This feature can be enabled with the "Show user's pronouns in user card" setting.
 
-![img](https://i.pajlada.se/rnLdM.png)
+![user-card-pronouns](./changelog/2.5.2/user-card-pronouns.png)
 
 <br />
 Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
