add heading ids

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,9 +7,9 @@ import Section from "../components/section";
 
 # Chatterino Changelog
 
-## 2.5.2 (Released TBD)
+## 2.5.2 (Released TBD) {#2.5.2}
 
-### Added overlay window support
+### Added overlay window support {#2.5.2-overlay-window}
 
 <div className="changelog-entry">
 
@@ -23,7 +23,7 @@ Authored by @nerixyz with help from @pajlada
 
 </div>
 
-### Improved support for new Twitch features
+### Improved support for new Twitch features {#2.5.2-twitch-features}
 
 <div className="changelog-entry">
 
@@ -31,6 +31,7 @@ Messages using the **Message Effects** or **Gigantify an Emote** power-up
 feature are now highlighted. We don't actually show any message effects, nor do we gigantify the emote, but you can pretend the emote is bigger now that you know it's meant to be gigantified.
 
 ![message-effect](./changelog/2.5.2/message-effect.png)
+
 <br />
 ![gigantic-emote](./changelog/2.5.2/gigantic-emote.png)
 
@@ -59,7 +60,7 @@ Authored by @iProdigy and @pajlada with help from @nerixyz
 
 </div>
 
-### Added Twitch moderation features
+### Added Twitch moderation features {#2.5.2-twitch-moderation}
 
 <div className="changelog-entry">
 
@@ -103,7 +104,7 @@ Authored by @pajlada
 
 </div>
 
-### User Card Pronouns
+### User Card Pronouns {#2.5.2-pronouns}
 
 <div className="changelog-entry">
 
@@ -118,7 +119,7 @@ Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
 
 </div>
 
-### Improved tab unread indicators
+### Improved tab unread indicators {#2.5.2-tab-indicators}
 
 <div className="changelog-entry">
 
@@ -129,7 +130,7 @@ Authored by @hemirt with help from @nerixyz @pajlada
 
 </div>
 
-### Plugins alpha release
+### Plugins alpha release {#2.5.2-plugins}
 
 <div className="changelog-entry">
 
@@ -148,7 +149,7 @@ Authored by @Mm2PL with help from @nerixyz @pajlada
 
 </div>
 
-### Improved high-DPI support on Windows
+### Improved high-DPI support on Windows {#2.5.2-high-dpi}
 
 <div className="changelog-entry">
 
@@ -159,7 +160,7 @@ Authored by @nerixyz
 
 </div>
 
-### Duplicating tabs
+### Duplicating tabs {#2.5.2-duplicate-tabs}
 
 <div className="changelog-entry">
 
@@ -173,7 +174,7 @@ Authored by @KleberPF with help from @kornes @nerixyz @8thony @pajlada
 
 </div>
 
-### Modified tab visibility control
+### Modified tab visibility control {#2.5.2-tab-visibility}
 
 <div className="changelog-entry">
 
@@ -188,7 +189,7 @@ Authored by @pajlada with help from @nerixyz and @Mm2PL
 
 </div>
 
-### Improved error handling for Twitch API requests
+### Improved error handling for Twitch API requests {#2.5.2-twitch-api-errors}
 
 <div className="changelog-entry">
 
@@ -199,7 +200,7 @@ Authored by @JakeRYW
 
 </div>
 
-### Updated browser list for "Open links in private mode" feature
+### Updated browser list for "Open links in private mode" feature {#2.5.2-private-mode-browsers}
 
 <div className="changelog-entry">
 
@@ -212,7 +213,7 @@ Authored by @Niller2005 and @teknsl
 
 </div>
 
-### Settings improvements
+### Settings improvements {#2.5.2-settings-improvements}
 
 <div className="changelog-entry">
 
@@ -224,7 +225,7 @@ Authored by @nerixyz and @pajlada
 
 </div>
 
-### Improved link handling
+### Improved link handling {#2.5.2-link-parsing}
 
 <div className="changelog-entry">
 
@@ -235,7 +236,7 @@ Authored by @nerixyz
 
 </div>
 
-### Helix API emote loading
+### Helix API emote loading {#2.5.2-helix-emotes}
 
 <div className="changelog-entry">
 
@@ -246,7 +247,7 @@ Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
 
 </div>
 
-### Removed beta IRC support
+### Removed beta IRC support {#2.5.2-bye-irc}
 
 <div className="changelog-entry">
 
@@ -257,7 +258,7 @@ Authored by @pajlada
 
 </div>
 
-### Miscellaneous features
+### Miscellaneous features {#2.5.2-miscellaneous-features}
 
 <div className="changelog-entry">
 
@@ -277,7 +278,7 @@ Authored by @pajlada
 
 </div>
 
-### Miscellaneous bugfixes
+### Miscellaneous bugfixes {#2.5.2-miscellaneous-bugfixes}
 
 <div className="changelog-entry">
 
@@ -308,7 +309,7 @@ Authored by @pajlada
 
 </div>
 
-### Nerdier things
+### Nerdier things {#2.5.2-nerd-things}
 
 <div className="changelog-entry">
 
