unrelated: set title for changelog page

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -1,5 +1,10 @@
+import Head from 'next/head';
 import Nav from "../components/nav";
 import Section from "../components/section";
+
+<Head>
+<title>Changelog - Chatterino</title>
+</Head>
 
 <Nav />
 
