--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -1,9 +1,9 @@
-import Head from 'next/head';
+import Head from "next/head";
 import Nav from "../components/nav";
 import Section from "../components/section";
 
 <Head>
-<title>Changelog - Chatterino</title>
+  <title>Changelog - Chatterino</title>
 </Head>
 
 <Nav />
