chore: add figures

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -1,6 +1,8 @@
 import Head from "next/head";
 import Nav from "../components/nav";
 import Section from "../components/section";
+import Figure from "../components/figure";
+import FigureGroup from "../components/figure-group";
 
 <Head>
   <title>Changelog - Chatterino</title>
@@ -21,9 +23,10 @@ import Section from "../components/section";
 You can now press <kbd>CTRL</kbd> + <kbd>ALT</kbd> + <kbd>N</kbd> to open an
 overlay window of your selected split.
 
-![overlay-window](./changelog/2.5.2/overlay-window.png)
+<Figure src="./changelog/2.5.2/overlay-window.png" width="500">
+  Active overlay window over a stream
+</Figure>
 
-<br />
 Authored by @nerixyz with help from @pajlada
 
 </div>
@@ -35,38 +38,42 @@ Authored by @nerixyz with help from @pajlada
 Messages using the **Message Effects** or **Gigantify an Emote** power-up
 feature are now highlighted. We don't actually show any message effects, nor do we gigantify the emote, but you can pretend the emote is bigger now that you know it's meant to be gigantified.
 
-![message-effect](./changelog/2.5.2/message-effect.png)
-
-<br />
-![gigantic-emote](./changelog/2.5.2/gigantic-emote.png)
-
-<br />
+<FigureGroup>
+  <Figure src="./changelog/2.5.2/message-effect.png" width="400">
+    A **Message Effect** redemption
+  </Figure>
+  <Figure src="./changelog/2.5.2/gigantic-emote.png" width="400">
+    A **Gigantify an Emote** redemption
+  </Figure>
+</FigureGroup>
 
 Messages from Shared Chats now indicate which channel it was sent in.
 
-![shared-chat](./changelog/2.5.2/shared-chat.png)
-
-<br />
+<Figure src="./changelog/2.5.2/shared-chat.png" width="500">
+  A message from a shared chat
+</Figure>
 
 We've provided better control of some AutoMod features. You can control whether or not to show AutoMod messages that were blocked due to a blocked term. By default, no blocked terms will be visible if you have streamer mode enabled.
 
-Streamer mode enabled:
-
-![streamer mode
-enabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png)
-
-<br />
-
-Streamer mode disabled:
-
-![streamer mode
-disabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png)
-
-<br />
+<FigureGroup>
+  <Figure
+    src="./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png"
+    width="400"
+  >
+    AutoMod alerts in streamer mode
+  </Figure>
+  <Figure
+    src="./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png"
+    width="400"
+  >
+    AutoMod alerts with streamer mode disabled
+  </Figure>
+</FigureGroup>
 
 Added the `/warn` command which prevents the user from chatting until they acknowledge the warning on Twitch's website.
 
 <br />
+
 Authored by @iProdigy and @pajlada with help from @nerixyz
 
 </div>
@@ -79,17 +86,19 @@ If you use the inline moderation buttons, you can now upload custom icons for th
 
 To add an icon to a moderation action, click Moderation in the Settings dialog, go to the Moderation buttons tab, and double-click the icon cell next to your action.
 
-![in-settings](./changelog/2.5.2/moderation-button-settings.png)
+<Figure src="./changelog/2.5.2/moderation-button-settings.png" width="500">
+  Settings for custom moderation action buttons
+</Figure>
 
-In chat:
+<FigureGroup>
+  <Figure src="./changelog/2.5.2/moderation-button-in-chat.png" width="300">
+    Custom moderation actions in chat
+  </Figure>
+  <Figure src="./changelog/2.5.2/moderation-button-after-click.png" width="300">
+    User timed out after clicking
+  </Figure>
+</FigureGroup>
 
-![in-chat](./changelog/2.5.2/moderation-button-in-chat.png)
-
-After clicking the moderation icon:
-
-![after-action](./changelog/2.5.2/moderation-button-after-click.png)
-
-<br />
 Authored by @Mm2PL with help from @nerixyz and @pajlada
 
 <br />
@@ -123,9 +132,10 @@ You can now show a user's pronoun from [pr.alejo.io](https://pr.alejo.io) in the
 
 This feature can be enabled with the "Show user's pronouns in user card" setting.
 
-![user-card-pronouns](./changelog/2.5.2/user-card-pronouns.png)
+<Figure src="./changelog/2.5.2/user-card-pronouns.png" width="400">
+  Pronouns shown in the user card
+</Figure>
 
-<br />
 Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
 
 </div>
