chore: make changelog slimmer

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -10,7 +10,7 @@ import FigureGroup from "../components/figure-group";
 
 <Nav />
 
- <Section className="changelog px-16">
+ <Section className="changelog px-16" prose>
 
 # Chatterino Changelog
 
