add a smol break between automod images

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -50,8 +50,14 @@ Messages from Shared Chats now indicate which channel it was sent in.
 
 We've provided better control of some AutoMod features. You can control whether or not to show AutoMod messages that were blocked due to a blocked term. By default, no blocked terms will be visible if you have streamer mode enabled.
 
+Streamer mode enabled:
+
 ![streamer mode
 enabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png)
+
+<br />
+
+Streamer mode disabled:
 
 ![streamer mode
 disabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png)
