--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -3,6 +3,7 @@ import Nav from "../components/nav";
 import Section from "../components/section";
 import Figure from "../components/figure";
 import FigureGroup from "../components/figure-group";
+import Credit from "../components/credit";
 
 <Head>
   <title>Changelog - Chatterino</title>
@@ -27,7 +28,7 @@ overlay window of your selected split.
   Active overlay window over a stream
 </Figure>
 
-Authored by @nerixyz with help from @pajlada
+<Credit>Authored by @nerixyz with help from @pajlada</Credit>
 
 </div>
 
@@ -72,9 +73,7 @@ We've provided better control of some AutoMod features. You can control whether 
 
 Added the `/warn` command which prevents the user from chatting until they acknowledge the warning on Twitch's website.
 
-<br />
-
-Authored by @iProdigy and @pajlada with help from @nerixyz
+<Credit>Authored by @iProdigy and @pajlada with help from @nerixyz</Credit>
 
 </div>
 
@@ -99,9 +98,7 @@ To add an icon to a moderation action, click Moderation in the Settings dialog, 
   </Figure>
 </FigureGroup>
 
-Authored by @Mm2PL with help from @nerixyz and @pajlada
-
-<br />
+<Credit>Authored by @Mm2PL with help from @nerixyz and @pajlada</Credit>
 
 The `/ban`, `/timeout`, `/unban`, `/untimeout` commands now accept multiple channels if you want to easier wipe out cross-channel shenanigans.
 
@@ -119,8 +116,7 @@ Example moderation button action:
 
 - Ban the user in the current channel + another channel: `/ban --channel {channel.name} --channel nymn {user.name}`
 
-<br />
-Authored by @pajlada
+<Credit>Authored by @pajlada</Credit>
 
 </div>
 
@@ -136,7 +132,9 @@ This feature can be enabled with the "Show user's pronouns in user card" setting
   Pronouns shown in the user card
 </Figure>
 
-Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
+<Credit>
+  Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
+</Credit>
 
 </div>
 
@@ -146,8 +144,7 @@ Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
 
 If you have the same channel open in multiple tabs, "reading" the message in one tab marks the other tabs as unread.
 
-<br />
-Authored by @hemirt with help from @nerixyz @pajlada
+<Credit>Authored by @hemirt with help from @nerixyz @pajlada</Credit>
 
 </div>
 
@@ -165,8 +162,7 @@ Plugins are currently able to:
 
 - TODO: List capabilities (e.g. network requests, making messages)
 
-<br />
-Authored by @Mm2PL with help from @nerixyz @pajlada
+<Credit>Authored by @Mm2PL with help from @nerixyz @pajlada</Credit>
 
 </div>
 
@@ -176,8 +172,7 @@ Authored by @Mm2PL with help from @nerixyz @pajlada
 
 Text, buttons, windows should now better respect your Windows display scale setting. If you've previously increased your font size & Chatterino2 scale then you might need to re-adjust them with this release.
 
-<br />
-Authored by @nerixyz
+<Credit>Authored by @nerixyz</Credit>
 
 </div>
 
@@ -190,8 +185,9 @@ Tab". This will duplicate all splits in the tab, and their associated filters.
 
 TODO: maybe add a little gif
 
-<br />
-Authored by @KleberPF with help from @kornes @nerixyz @8thony @pajlada
+<Credit>
+  Authored by @KleberPF with help from @kornes @nerixyz @8thony @pajlada
+</Credit>
 
 </div>
 
@@ -205,8 +201,7 @@ This removes the default Ctrl+Shift+L hotkey which was used for toggling the "li
 
 Custom hotkeys can still be added to swap to various tab visibility modes.
 
-<br />
-Authored by @pajlada with help from @nerixyz and @Mm2PL
+<Credit>Authored by @pajlada with help from @nerixyz and @Mm2PL</Credit>
 
 </div>
 
@@ -216,8 +211,7 @@ Authored by @pajlada with help from @nerixyz and @Mm2PL
 
 When using the `/settitle` and `/setgame` commands you're now told what's actually wrong.
 
-<br />
-Authored by @JakeRYW
+<Credit>Authored by @JakeRYW</Credit>
 
 </div>
 
@@ -229,8 +223,7 @@ Added Brave, google-chrome-stable, firefox-devedition,
 firefox-developer-edition, firefox-beta, and firefox-nightly as
 supported browsers.
 
-<br />
-Authored by @Niller2005 and @teknsl
+<Credit>Authored by @Niller2005 and @teknsl</Credit>
 
 </div>
 
@@ -241,8 +234,7 @@ Authored by @Niller2005 and @teknsl
 - Dragging & dropping now shows a line indicator instead of rectangle while reordering entries in tables.
 - Added some search tags for settings so it's easier to find them using search (e.g. "bttv" and "ffz" show all the BetterTTV and FrankerFaceZ settings.)
 
-<br />
-Authored by @nerixyz and @pajlada
+<Credit>Authored by @nerixyz and @pajlada</Credit>
 
 </div>
 
@@ -252,8 +244,7 @@ Authored by @nerixyz and @pajlada
 
 More actual links are now parsed as links, and non-links-but-things-that-look-like-links no longer parse as links.
 
-<br />
-Authored by @nerixyz
+<Credit>Authored by @nerixyz</Credit>
 
 </div>
 
@@ -263,8 +254,9 @@ Authored by @nerixyz
 
 We now use Twitch's Helix API to load the list of emotes you can post. This means we can now see most emotes you have access to, including event emotes.
 
-<br />
-Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
+<Credit>
+  Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
+</Credit>
 
 </div>
 
@@ -274,8 +266,7 @@ Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
 
 If you were one of the 6 people using the IRC capability of Chatterino2, we have decided to no longer pursue this option - at least not in the way we did here. This release completely removes the IRC support. If you had IRC splits open before, they'll be replaced with empty splits with this release.
 
-<br />
-Authored by @pajlada
+<Credit>Authored by @pajlada</Credit>
 
 </div>
 
