--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -28,7 +28,7 @@ overlay window of your selected split.
   Active overlay window over a stream
 </Figure>
 
-<Credit>Authored by @nerixyz with help from @pajlada</Credit>
+<Credit author="nerixyz" helper="pajlada" />
 
 </div>
 
@@ -73,7 +73,7 @@ We've provided better control of some AutoMod features. You can control whether 
 
 Added the `/warn` command which prevents the user from chatting until they acknowledge the warning on Twitch's website.
 
-<Credit>Authored by @iProdigy and @pajlada with help from @nerixyz</Credit>
+<Credit author="iProdigy, pajlada" helper="nerixyz" />
 
 </div>
 
@@ -98,7 +98,7 @@ To add an icon to a moderation action, click Moderation in the Settings dialog, 
   </Figure>
 </FigureGroup>
 
-<Credit>Authored by @Mm2PL with help from @nerixyz and @pajlada</Credit>
+<Credit author="Mm2PL" helper="nerixyz, pajlada" />
 
 The `/ban`, `/timeout`, `/unban`, `/untimeout` commands now accept multiple channels if you want to easier wipe out cross-channel shenanigans.
 
@@ -116,7 +116,7 @@ Example moderation button action:
 
 - Ban the user in the current channel + another channel: `/ban --channel {channel.name} --channel nymn {user.name}`
 
-<Credit>Authored by @pajlada</Credit>
+<Credit author="pajlada" />
 
 </div>
 
@@ -132,9 +132,7 @@ This feature can be enabled with the "Show user's pronouns in user card" setting
   Pronouns shown in the user card
 </Figure>
 
-<Credit>
-  Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
-</Credit>
+<Credit author="franzitrone" helper="nerixyz, pajlada, iProdigy" />
 
 </div>
 
@@ -144,7 +142,7 @@ This feature can be enabled with the "Show user's pronouns in user card" setting
 
 If you have the same channel open in multiple tabs, "reading" the message in one tab marks the other tabs as unread.
 
-<Credit>Authored by @hemirt with help from @nerixyz @pajlada</Credit>
+<Credit author="hemirt" helper="nerixyz, pajlada" />
 
 </div>
 
@@ -162,7 +160,7 @@ Plugins are currently able to:
 
 - TODO: List capabilities (e.g. network requests, making messages)
 
-<Credit>Authored by @Mm2PL with help from @nerixyz @pajlada</Credit>
+<Credit author="Mm2PL" helper="nerixyz, pajlada" />
 
 </div>
 
@@ -172,7 +170,7 @@ Plugins are currently able to:
 
 Text, buttons, windows should now better respect your Windows display scale setting. If you've previously increased your font size & Chatterino2 scale then you might need to re-adjust them with this release.
 
-<Credit>Authored by @nerixyz</Credit>
+<Credit author="nerixyz"/>
 
 </div>
 
@@ -185,9 +183,7 @@ Tab". This will duplicate all splits in the tab, and their associated filters.
 
 TODO: maybe add a little gif
 
-<Credit>
-  Authored by @KleberPF with help from @kornes @nerixyz @8thony @pajlada
-</Credit>
+<Credit author="KleberPF" helper="kornes, nerixyz, 8thony, pajlada" />
 
 </div>
 
@@ -201,7 +197,7 @@ This removes the default Ctrl+Shift+L hotkey which was used for toggling the "li
 
 Custom hotkeys can still be added to swap to various tab visibility modes.
 
-<Credit>Authored by @pajlada with help from @nerixyz and @Mm2PL</Credit>
+<Credit author="pajlada" helper="nerixyz, Mm2PL" />
 
 </div>
 
@@ -211,7 +207,7 @@ Custom hotkeys can still be added to swap to various tab visibility modes.
 
 When using the `/settitle` and `/setgame` commands you're now told what's actually wrong.
 
-<Credit>Authored by @JakeRYW</Credit>
+<Credit author="JakeRYW"/>
 
 </div>
 
@@ -223,7 +219,7 @@ Added Brave, google-chrome-stable, firefox-devedition,
 firefox-developer-edition, firefox-beta, and firefox-nightly as
 supported browsers.
 
-<Credit>Authored by @Niller2005 and @teknsl</Credit>
+<Credit author="Niller2005, teknsl"/>
 
 </div>
 
@@ -234,7 +230,7 @@ supported browsers.
 - Dragging & dropping now shows a line indicator instead of rectangle while reordering entries in tables.
 - Added some search tags for settings so it's easier to find them using search (e.g. "bttv" and "ffz" show all the BetterTTV and FrankerFaceZ settings.)
 
-<Credit>Authored by @nerixyz and @pajlada</Credit>
+<Credit author="nerixyz, pajlada"/>
 
 </div>
 
@@ -244,7 +240,7 @@ supported browsers.
 
 More actual links are now parsed as links, and non-links-but-things-that-look-like-links no longer parse as links.
 
-<Credit>Authored by @nerixyz</Credit>
+<Credit author="nerixyz"/>
 
 </div>
 
@@ -254,9 +250,7 @@ More actual links are now parsed as links, and non-links-but-things-that-look-li
 
 We now use Twitch's Helix API to load the list of emotes you can post. This means we can now see most emotes you have access to, including event emotes.
 
-<Credit>
-  Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
-</Credit>
+<Credit author="nerixyz" helper="Felanbird, occluder, iProdigy, pajlada"/>
 
 </div>
 
@@ -266,7 +260,7 @@ We now use Twitch's Helix API to load the list of emotes you can post. This mean
 
 If you were one of the 6 people using the IRC capability of Chatterino2, we have decided to no longer pursue this option - at least not in the way we did here. This release completely removes the IRC support. If you had IRC splits open before, they'll be replaced with empty splits with this release.
 
-<Credit>Authored by @pajlada</Credit>
+<Credit author="pajlada"/>
 
 </div>
 
